--- a/style.css
+++ b/style.css
@@ -1,14 +1,47 @@
-* {
+body {
     margin: 0;
-    box-sizing: border-box;
     padding: 0;
-}
-
-.divLogo {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    box-sizing: border-box;
+    background-color: white;
+  }
+  
+  .container {
+    display: flex;
+    width: 80%;
+    margin: auto;
+  }
+  
+  img{
     width: 20%;
-    height: 15%;
-}
-.logo {
-    width: 100%;
-    height: 100%;
-}
+  }
+  
+  header {
+    margin: 10px;
+    background: rgb(0,0,0);
+    background: linear-gradient(180deg, rgba(0,0,0,1) 3%, rgba(9,9,121,1) 45%, rgba(0,95,115,1) 74%);
+    border-radius: 50px;
+  }
+  
+  header .container {
+    justify-content: space-between;
+  }
+  
+  .navbar {
+    width: 300px;
+    display: flex;
+    flex-direction: row;
+    text-decoration: none;
+    list-style: none;
+    justify-content: space-between;
+    color: #FFFFFF;
+    align-items: center;
+  }
+  .navbar li {
+    transition: 0.5s;
+  }
+
+  .navbar li:hover {
+    cursor: pointer;
+    color: #32b9cd;
+  }
