--- a/style.css
+++ b/style.css
@@ -1,47 +1,146 @@
 body {
-    margin: 0;
-    padding: 0;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    box-sizing: border-box;
-    background-color: white;
-  }
-  
-  .container {
-    display: flex;
-    width: 80%;
-    margin: auto;
-  }
-  
-  img{
-    width: 20%;
-  }
-  
-  header {
-    margin: 10px;
-    background: rgb(0,0,0);
-    background: linear-gradient(180deg, rgba(0,0,0,1) 3%, rgba(9,9,121,1) 45%, rgba(0,95,115,1) 74%);
-    border-radius: 50px;
-  }
-  
-  header .container {
-    justify-content: space-between;
-  }
-  
-  .navbar {
-    width: 300px;
-    display: flex;
-    flex-direction: row;
-    text-decoration: none;
-    list-style: none;
-    justify-content: space-between;
-    color: #FFFFFF;
-    align-items: center;
-  }
-  .navbar li {
-    transition: 0.5s;
-  }
+  margin: 0;
+  padding: 0;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  box-sizing: border-box;
+  background-color: white;
+}
 
-  .navbar li:hover {
-    cursor: pointer;
-    color: #32b9cd;
-  }
+.container {
+  display: flex;
+  width: 80%;
+  margin: auto;
+}
+
+.titulo{
+  display: flex;
+  align-items: center;
+  height: 100px;
+  justify-content: center;
+}
+
+h1 {
+  color: rgb(0, 95, 115);
+}
+
+img {
+  width: 20%;
+}
+
+header {
+  margin: 10px;
+  background: rgb(0, 0, 0);
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 1) 3%,
+    rgba(9, 9, 121, 1) 45%,
+    rgba(0, 95, 115, 1) 74%
+  );
+  border-radius: 50px;
+}
+
+header .container {
+  justify-content: space-between;
+}
+
+.navbar {
+  width: 300px;
+  display: flex;
+  flex-direction: row;
+  text-decoration: none;
+  list-style: none;
+  justify-content: space-between;
+  color: #ffffff;
+  align-items: center;
+}
+.navbar li {
+  transition: 0.5s;
+}
+
+.navbar li:hover {
+  cursor: pointer;
+  color: #32b9cd;
+}
+
+.calc {
+  margin: auto;
+  margin-bottom: 5%;
+  width: 80%;
+  height: 430px;
+  background-color: rgb(0, 95, 115);
+  border-radius: 100px;
+  display: flex;
+  padding: 50px;
+}
+
+.calc .conta {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+  padding: 5px;
+  border: red 1px solid;
+}
+
+.calc input {
+  width: 352px;
+  height: 20px;
+  border-radius: 15px;
+  border: none;
+  padding: 5px;
+  text-indent: 3px;
+}
+.calc button {
+  border-radius: 15px;
+  height: 25px;
+  width: 150px;
+  border: none;
+}
+
+.calc button{
+  transition: .5s;
+}
+
+.calc button:hover {
+  border: none;
+  color: white;
+  background-color: rgba(2, 148, 177, 0.863);
+}
+
+.suport {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: auto;
+  width: 80%;
+  height: 430px;
+  background-color: rgba(2, 148, 177, 0.863);
+  border-radius: 100px;
+}
+
+.calc span {
+  color: white;
+}
+
+ol {
+  list-style: none; /* Remove o estilo padrão da lista */
+  counter-reset: item; /* Zera o contador */
+  justify-content: space-around;
+  display: flex;
+  flex-direction: column;
+}
+ol li {
+  counter-increment: item; /* Incrementa o contador a cada item */
+  margin: 2em;
+}
+ol li::before {
+  content: counter(item); /* Mostra o número do contador */
+  color: #ffffff; /* Define a cor do número */
+  background-color: blue; /*Cor da numeração da lista */
+  border-radius: 50%;
+  padding: 15px;
+  font-weight: bold; /* Define a fonte em negrito */
+  margin-right: 0.5em; /* Espaçamento entre o número e o texto */
+}
+
