--- a/style.css
+++ b/style.css
@@ -182,3 +182,22 @@ table, tr, td {
   color: whitesmoke;
 }
 
+.mensagem {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+  padding: 5px;
+  border: red 1px solid;
+}
+
+.mensagem h1 {
+  color: white;
+  text-align: center;
+}
+
+#mensagem span {
+  color: green;
+  text-shadow: 2px 2px #000000;
+}
